Revision history for perl distribution Toadfarm

0.62 Not Released
 - Fix init script recipe in Toadfarm::Manual::RunningToadfarm
 - Will not run t/reload.t without TEST_RELOAD=1 #13

0.61 2015-05-04T17:12:07+0200
 - Fix "Permission denied" when running "sudo" without -i

0.60 2015-05-02T09:32:44+0200
 - Fix t/rules.t
 - Fix 'Use of "rand" without parentheses is ambiguous'

0.59 2015-05-02T01:50:42+0200
 - Fix sudo to run with -H
 - Fix matching X-Request-Base with a regex
 - Fix "/" in matching HTTP header regex

0.58 2015-05-01T13:28:24+0200
 - Fix creating config with references

0.57 2015-04-30T23:24:53+0200
 - Fix './toadfarm.pl daemon' by setting a default TOADFARM_ACTION value

0.56 2015-04-28T17:36:26+0200
 - Will not run t/run-as.t unless TOADFARM_SUDO_TEST=1

0.55 2015-04-27T07:52:44+0200
 - Add support for Mojolicious::Plugin::SetUserGroup

0.54 2015-04-26T23:32:44+0200
 - Add run_as()
 - Unable to change user/group without setting TOADFARM_INSECURE=1
 - Unable to start as root without setting TOADFARM_INSECURE=1

0.53 2015-04-26T14:07:33+0200
 - Can generate local config file pr. app
 - Try to improve cpan testers result
 - Add note about previous Toadfarm version
 - Add note about plenv/perlbrew to RunningToadfarm
 - Move "Listen to standard HTTP ports" documentation to RunningToadfarm

0.52 2015-04-26T10:10:31+0200
 - Fix documentation #6 #8
 - Fix Toadfarm::Plugin::Reload #5
   https://developer.github.com/webhooks/#payloads
 - Can find hypnotoad, even if not in $PATH
 - Replaced -dsl with -init

0.51 2015-04-24T22:40:22+0200
 - Remove outdated documentation and examples
 - Add init-v example
 - Add crontab example
 - Improved "stop" command speed

0.50 2015-04-24T21:42:25+0200
 - Toadfarm DSL scripts can be used as init scripts
 - Deprecated script/toadfarm

0.49 2015-04-23T19:59:52+0200
 - Allow single application in DSL to be the only application

0.48 2015-04-23T19:40:05+0200
 - Add support for defining applications using DSL