@@ -23,7 +23,10 @@ Go to "https://github.com/YOUR-USERNAME/YOUR-REPO/settings/hooks" to set it up.
 =item *
 
 The WebHook URL needs to be "http://yourserver.com/some/secret/path" and
-should not trigger any of the mounted apps.
+should not trigger any of the mounted apps, e.g. with
+L<virtual hosts|Toadfarm::Manual::VirtualHost>, the hostname part of the
+WebHook URL need to be unique from the mounted apps. One way to do this is
+simply to use an IP address instead of a hostname.
 
 =back
 
